--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -248,4 +248,30 @@
     <dimen name="item_rcv_image_avatar_invites_location_width_and_height">50dp</dimen>
 
     <!--    Chat-->
+    <dimen name="tv_title_search_chat_margin_start">25dp</dimen>
+    <dimen name="tv_title_search_chat_margin_top">27dp</dimen>
+    <dimen name="tv_title_search_chat_line_height">30dp</dimen>
+    <dimen name="tv_title_search_chat_size">20dp</dimen>
+    <dimen name="edt_search_member_chat_margin_start">16dp</dimen>
+    <dimen name="edt_search_member_chat_margin_top">16dp</dimen>
+    <dimen name="edt_search_member_chat_margin_end">16dp</dimen>
+    <dimen name="edt_search_member_chat_line_height">18dp</dimen>
+    <dimen name="edt_search_member_chat_size">12dp</dimen>
+    <dimen name="edt_search_member_chat_padding_start">21dp</dimen>
+    <dimen name="edt_search_member_chat_padding_top">13dp</dimen>
+    <dimen name="edt_search_member_chat_padding_bottom">13dp</dimen>
+    <dimen name="tv_title_chat_size">20dp</dimen>
+    <dimen name="tv_title_chat_line_height">30dp</dimen>
+    <dimen name="tv_title_chat_margin_top">29dp</dimen>
+    <dimen name="tv_title_chat_margin_start">25dp</dimen>
+    <dimen name="rcv_member_chat_height">0dp</dimen>
+    <dimen name="rcv_member_chat_margin_start">23dp</dimen>
+    <dimen name="rcv_member_chat_margin_top">17dp</dimen>
+    <dimen name="rcv_member_chat_margin_end">23dp</dimen>
+    <dimen name="avatar_item_rcv_member_chat_width">50dp</dimen>
+    <dimen name="avatar_item_rcv_member_chat_height">50dp</dimen>
+    <dimen name="name_user_item_rcv_member_chat_size">12dp</dimen>
+    <dimen name="name_user_item_rcv_member_chat_line_height">18dp</dimen>
+    <dimen name="name_user_item_rcv_member_chat_margin_start">17dp</dimen>
+    <dimen name="name_user_item_rcv_member_chat_margin_top">3dp</dimen>
 </resources>
