--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@
     <dimen name="line_height_text_backpack_account">21dp</dimen>
     <dimen name="edt_sign_up_backpack_margin_start_end">38dp</dimen>
     <dimen name="text_backpack_sign_up_margin_end">17dp</dimen>
+    <dimen name="tv_waring_sign_up_margin_start">42dp</dimen>
 
     <!--    Fragment_Log_In-->
     <dimen name="text_backpack_forgot_password_log_in_margin_top">13dp</dimen>
@@ -274,4 +275,16 @@
     <dimen name="name_user_item_rcv_member_chat_line_height">18dp</dimen>
     <dimen name="name_user_item_rcv_member_chat_margin_start">17dp</dimen>
     <dimen name="name_user_item_rcv_member_chat_margin_top">3dp</dimen>
+    <dimen name="message_user_item_rcv_member_chat_size">12dp</dimen>
+    <dimen name="message_user_item_rcv_member_chat_line_height">18dp</dimen>
+    <dimen name="scroll_view_contains_message_item_rcv_member_chat_width">155dp</dimen>
+    <dimen name="scroll_view_contains_message_item_rcv_member_chat_height">17dp</dimen>
+    <dimen name="scroll_view_contains_message_item_rcv_member_chat_margin_top">6dp</dimen>
+    <dimen name="scroll_view_contains_message_item_rcv_member_chat_margin_start">17dp</dimen>
+    <dimen name="time_user_send_message_item_rcv_member_chat_size">10dp</dimen>
+    <dimen name="time_user_send_message_item_rcv_member_chat_line_height">16dp</dimen>
+    <dimen name="time_user_send_message_item_rcv_member_chat_margin_top">3dp</dimen>
+    <dimen name="user_online_item_rcv_member_chat_margin_top">11dp</dimen>
+    <dimen name="item_member_chat_margin_top">14.5dp</dimen>
+    <dimen name="item_member_chat_margin_bottom">14.5dp</dimen>
 </resources>
