--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -317,4 +317,81 @@
     <dimen name="scroll_view_contain_rcv_home_margin_top">38dp</dimen>
     <dimen name="scroll_view_contain_rcv_home_margin_start">16dp</dimen>
     <dimen name="scroll_view_contain_rcv_home_margin_end">16dp</dimen>
+    <dimen name="name_item_post_home_size">14dp</dimen>
+    <dimen name="name_item_post_home_line_height">21dp</dimen>
+    <dimen name="name_item_post_home_margin_start">10dp</dimen>
+    <dimen name="name_item_post_home_margin_top">5dp</dimen>
+    <dimen name="avatar_item_rcv_post_home_width">30dp</dimen>
+    <dimen name="avatar_item_rcv_post_home_height">30dp</dimen>
+    <dimen name="time_item_post_home_margin_top">5dp</dimen>
+    <dimen name="time_item_post_home_size">10dp</dimen>
+    <dimen name="time_item_post_home_line_height">16dp</dimen>
+    <dimen name="image_trip_item_rcv_post_home">232dp</dimen>
+    <dimen name="tv_day_trip_item_rcv_post_home_line_height">18dp</dimen>
+    <dimen name="tv_day_trip_item_rcv_post_home_size">12dp</dimen>
+    <dimen name="tv_day_trip_item_rcv_post_home_margin_top">17dp</dimen>
+    <dimen name="tv_day_trip_item_rcv_post_home_margin_start">9dp</dimen>
+    <dimen name="rcv_user_like_item_post_home_margin_top">14dp</dimen>
+    <dimen name="rcv_user_like_item_post_home_margin_end">19dp</dimen>
+    <dimen name="name_country_item_rcv_post_home_margin_start">16dp</dimen>
+    <dimen name="name_country_item_rcv_post_home_margin_bottom">9dp</dimen>
+    <dimen name="journey_item_rcv_post_home_size">12dp</dimen>
+    <dimen name="journey_item_rcv_post_home_line_height">18dp</dimen>
+    <dimen name="journey_item_rcv_post_home_margin_bottom">12dp</dimen>
+    <dimen name="journey_item_rcv_post_home_margin_end">17dp</dimen>
+    <dimen name="btn_join_item_rcv_post_home_height">29dp</dimen>
+    <dimen name="btn_join_item_rcv_post_home_line_height">21dp</dimen>
+    <dimen name="btn_join_item_rcv_post_home_size">14dp</dimen>
+    <dimen name="card_view_contains_information_item_rcv_post_home_margin_top">10dp</dimen>
+    <dimen name="card_view_contains_information_item_rcv_post_home_radius">7dp</dimen>
+    <dimen name="tv_next_trip_item_rcv_post_home_size">12dp</dimen>
+    <dimen name="tv_next_trip_item_rcv_post_home_line_height">18dp</dimen>
+    <dimen name="layout_contains_item_item_rcv_post_home_margin_top">13dp</dimen>
+    <dimen name="layout_contains_item_item_rcv_post_home_margin_end">16dp</dimen>
+    <dimen name="layout_contains_item_item_rcv_post_home_margin_start">16dp</dimen>
+    <dimen name="image_vehicle_item_rcv_post_home_width">24dp</dimen>
+    <dimen name="image_vehicle_item_rcv_post_home_height">24dp</dimen>
+    <dimen name="image_vehicle_item_rcv_post_home_margin_start">13dp</dimen>
+    <dimen name="ellipse_black_margin_start">4dp</dimen>
+    <dimen name="ellipse_black_margin_end">4dp</dimen>
+    <dimen name="month_of_travel_item_rcv_post_home_size">12dp</dimen>
+    <dimen name="month_of_travel_item_rcv_post_home_height">18dp</dimen>
+    <dimen name="ellipse_width">0dp</dimen>
+    <dimen name="number_of_turns_item_rcv_post_home_height">17dp</dimen>
+    <dimen name="number_of_turns_item_rcv_post_home_margin_start">16dp</dimen>
+    <dimen name="number_of_turns_item_rcv_post_home_margin_top">17dp</dimen>
+    <dimen name="number_of_turns_item_rcv_post_home_line_height">18dp</dimen>
+    <dimen name="number_of_turns_item_rcv_post_home_padding_start">10dp</dimen>
+    <dimen name="number_of_turns_item_rcv_post_home_padding_end">10dp</dimen>
+    <dimen name="number_of_turns_item_rcv_post_home_size">12dp</dimen>
+    <dimen name="tv_describe_item_rcv_post_home_margin_end">15dp</dimen>
+    <dimen name="tv_describe_item_rcv_post_home_margin_start">15dp</dimen>
+    <dimen name="tv_describe_item_rcv_post_home_margin_top">10dp</dimen>
+    <dimen name="view_item_rcv_post_home_height">1dp</dimen>
+    <dimen name="view_item_rcv_post_home_margin_start">16dp</dimen>
+    <dimen name="view_item_rcv_post_home_margin_end">16dp</dimen>
+    <dimen name="view_item_rcv_post_home_margin_top">12.5dp</dimen>
+    <dimen name="image_btn_heart_item_post_home_margin_top">11.5dp</dimen>
+    <dimen name="image_btn_heart_item_post_home_margin_bottom">12.8dp</dimen>
+    <dimen name="image_btn_heart_item_post_home_margin_start">21dp</dimen>
+    <dimen name="image_btn_share_item_post_home_margin_bottom">14.3dp</dimen>
+    <dimen name="image_btn_share_item_post_home_margin_start">17.1dp</dimen>
+    <dimen name="image_btn_share_item_post_home_margin_top">11.5dp</dimen>
+    <dimen name="add_to_bookmark_disable_item_rcv_posts_home_margin_top">19dp</dimen>
+    <dimen name="add_to_bookmark_disable_item_rcv_posts_home_margin_end">20dp</dimen>
+    <dimen name="add_to_bookmark_disable_item_rcv_posts_home_margin_bottom">15.5dp</dimen>
+    <dimen name="layout_contain_list_photo_and_video_margin_top">29dp</dimen>
+    <dimen name="layout_contain_list_photo_and_video_margin_start">16dp</dimen>
+    <dimen name="layout_contain_list_photo_and_video_margin_end">16dp</dimen>
+    <dimen name="video_view_item_rcv_post_width">152.53dp</dimen>
+    <dimen name="video_view_item_rcv_post_height">101.68dp</dimen>
+    <dimen name="image_more_item_rcv_posts_home_width">152.53dp</dimen>
+    <dimen name="image_more_item_rcv_posts_home_height">101.68dp</dimen>
+    <dimen name="amount_image_item_rcv_post_home_line_height">47dp</dimen>
+    <dimen name="amount_image_item_rcv_post_home_size">20dp</dimen>
+    <dimen name="rcv_service_item_rcv_post_home_width">0dp</dimen>
+    <dimen name="rcv_service_item_rcv_post_home_margin_start">16.6dp</dimen>
+    <dimen name="rcv_service_item_rcv_post_home_margin_end">16.6dp</dimen>
+    <dimen name="rcv_service_item_rcv_post_home_margin_top">18.5dp</dimen>
+    <dimen name="rcv_service_item_rcv_post_home_margin_bottom">16dp</dimen>
 </resources>
