--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,24 +8,27 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <!--    Splash_1-->
+    <!--    Splash 1-->
     <color name="text_backpack_splash_color">#FFD500</color>
     <color name="title_backpack_splash_color">#9F9F9F</color>
     <color name="background_button_sign_up_splash">#FFFFFF</color>
     <color name="backpack_splash_text_button_sign_up">#395AFF</color>
 
-    <!--    Fragment_Sign_Up-->
+    <!--    Fragment SignUp-->
     <color name="round_back_text_backpack">#000000</color>
     <color name="text_backpack_sign_up_to_log_in">#9F9F9F</color>
     <color name="text_waring">#FF0000</color>
 
-    <!--    Fragment_Log_In-->
+    <!--    Fragment LogIn-->
     <color name="text_forgot_password_backpack_log_in">#395AFF</color>
 
-    <!--    Fragment_Comeback-->
+    <!--    Fragment Comeback-->
     <color name="text_not_you_color">#777777</color>
     <color name="color_background_custom_toast">#B2FF81</color>
 
-    <!--    Fragment_Guide-->
+    <!--    Fragment Guide-->
     <color name="background_button_join_guide">#FFD500</color>
+
+    <!--    Fragment Home-->
+    <color name="background_view">#DCDCDC</color>
 </resources>
