--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -201,6 +201,10 @@
     <dimen name="text_title_trips_location_line_height">30dp</dimen>
     <dimen name="text_title_trips_location_size">20dp</dimen>
     <dimen name="layout_contain_select_country_location_margin_start">23dp</dimen>
+    <dimen name="layout_contain_select_country_location_width">0dp</dimen>
+    <dimen name="layout_contain_select_country_location_radius">7dp</dimen>
+    <dimen name="layout_contain_select_country_location_card_elevation">6dp</dimen>
+    <dimen name="layout_contain_select_country_location_margin_end">23dp</dimen>
     <dimen name="layout_contain_select_country_location_margin_top">17dp</dimen>
     <dimen name="image_ellipse_backpack_location_margin_start">16dp</dimen>
     <dimen name="select_country_location_margin_start">12dp</dimen>
